updated resource
